Use `URI::toURL` to create URLs (#1382)