@@ -19,7 +19,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -44,7 +44,7 @@ class EmptyBuildsTest extends AbstractWireMockTest {
     @BeforeAll
     static void setup() throws MalformedURLException {
         config = new BuildConfig();
-        config.setKojiHubURL(new URL(WIRE_MOCK_EXTENSION.baseUrl()));
+        config.setKojiHubURL(URI.create(WIRE_MOCK_EXTENSION.baseUrl()).toURL());
     }
 
     @Test
